<resources>
    <string name="app_name">ProjetSnowTam</string>
    <string name="Search">Search</string>
    <string name="Snowtam">Snowtam</string>
    <string name="AddAirport">Add Airport</string>
    <string name="title_activity_maps">Map</string>
    <string name="CodeICAO">ICOA code</string>
    <string name="google_maps_key">AIzaSyC1FlhgbntKfJRYl53xoaVK9txyMpd9Big</string>
    <string name="decodeSnowtam">Snowtam decoded</string>
    <string name="brutSnowtam">Raw snowtam</string>
    <string name="param">parameter</string>
    <string name="cryptage">See raw snowtam first : </string>
    <string name="mapFirst">See the snowtam first : </string>
    <string name="save">Save</string>
    <string name="seeFirst">See first :</string>

    <string-array name="langues">
        <item>English</item>
        <item>Français</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
